--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,1 +1,27 @@
-
+{
+  "compilerOptions": {
+    "target": "ESNext",             // Compile to modern JavaScript
+    "module": "ESNext",             // Use ES modules
+    "lib": ["dom", "dom.iterable", "esnext"], // Standard libraries
+    "jsx": "react-jsx",             // Use new JSX transform
+    "outDir": "./dist",             // Output compiled JS to a 'dist' subdirectory
+    "rootDir": "./",                // Root directory of source files
+    "strict": true,                 // Enable all strict type-checking options
+    "moduleResolution": "node",     // How modules are resolved
+    "allowSyntheticDefaultImports": true, // Allow default imports from modules with no default export
+    "esModuleInterop": true,        // Enables emit interoperability between CommonJS and ES Modules
+    "skipLibCheck": true,           // Skip type checking of declaration files
+    "forceConsistentCasingInFileNames": true, // Disallow inconsistently-cased references to the same file.
+    "resolveJsonModule": true,      // Allow importing .json files
+    "isolatedModules": true,        // Ensure each file can be safely transpiled without relying on other imports
+    "noEmit": false                 // Ensure compiler emits output (true would be for type checking only)
+  },
+  "include": [
+    "**/*.ts",
+    "**/*.tsx"
+  ],                             // Files to include in compilation
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]                      // Files/directories to exclude
+}
